--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="label_login_button">Log In</string>
+    <string name="shows_list_text">My shows</string>
+    <string name="show_image_description">Show image</string>
 </resources>
